import("//sdkpath.gni")


static_library("v8") {

  include_dirs = [

    "$ndkIncludePath",
    "$sdkPath/include/c++/7.2.0",
    "$sdkPath/include/c++/7.2.0/include",
    "$sdkPath/include/c++/7.2.0/x86_64-unknown-linux-gnu/",
    "$sdkPath2/usr/lib/x86_64-linux-gnu/glib-2.0/include",

    "$sdkPath/sysroot/usr/include",
    "$sdkPath/sysroot/usr/",
    "$sdkPath/sysroot/usr/include/linux",
    "$sdkPath2/usr/include/libdrm",

    "//",

    "$sdkPath2/usr/include/cairo",
    "$sdkPath2/usr/include/glib-2.0",
    "$sdkPath2/usr/include/gtk-3.0",
    "$sdkPath2/usr/include/gdk-pixbuf-2.0",
    "$sdkPath2/usr/include/atk-1.0",
    "$sdkPath2/usr/include/pango-1.0",

    "//linux",

    "//gen",
    "//third_party/abseil-cpp",
    "//v8",
    "//v8/include",
    "/",
    "//third_party/icu/source/i18n",
    "//third_party/icu/source/common",
    "//third_party/openssl/openssl/include",

    "//gen/v8x64linux",
    "//gen/v8x64linux/include",


  ]

  cflags = [

    "-fms-extensions",
    "-frtti",
    "-D_GLIBCXX_USE_C99_MATH",
    "-D_CRT_SECURE_NO_WARNINGS",
    "-D_GLIBCXX_USE_CXX11_ABI=1",

    "-D_CRT_SECURE_NO_DEPRECATE",
    "-D_CRT_NONSTDC_NO_DEPRECATE",
    "-D_HAS_EXCEPTIONS=0",

    "-DNOMINMAX",
    "-DENABLE_DISASSEMBLER",
    "-DOBJECT_PRINT",
        
    "-DDYNAMIC_ANNOTATIONS_ENABLED=0",
    "-DV8_OS_LINUX",

    "-DV8_HAVE_TARGET_OS",
    "-DV8_TARGET_OS_LINUX",
    "-DBUILDING_V8_SHARED=1",
    "-DBUILDING_UV_SHARED=1",
    "-DV8_TYPED_ARRAY_MAX_SIZE_IN_HEAP=64",
    "-DV8_INTL_SUPPORT",
    "-DV8_USE_EXTERNAL_STARTUP_DATA",
    "-DV8_ATOMIC_OBJECT_FIELD_WRITES",
    "-DV8_ENABLE_LAZY_SOURCE_POSITIONS",
    "-DV8_SHARED_RO_HEAP",
    "-DV8_ENABLE_REGEXP_INTERPRETER_THREADED_DISPATCH",
    "-DV8_SHORT_BUILTIN_CALLS",
    "-DV8_ENABLE_SYSTEM_INSTRUMENTATION",
    # "-DV8_ENABLE_ETW_STACK_WALKING",
    "-DV8_ENABLE_WEBASSEMBLY",
    "-DV8_ALLOCATION_FOLDING",
    "-DV8_ALLOCATION_SITE_TRACKING",
    "-DV8_ADVANCED_BIGINT_ALGORITHMS",
    "-DV8_USE_ZLIB",
    # "-DV8_EXTERNAL_CODE_SPACE",
    # "-DV8_COMPRESS_POINTERS",
    # "-DV8_COMPRESS_POINTERS_IN_SHARED_CAGE",
    # "-DV8_31BIT_SMIS_ON_64BIT_ARCH",
    # "-DV8_DEPRECATION_WARNINGS",
    # "-DCPPGC_CAGED_HEAP",
    # "-DCPPGC_YOUNG_GENERATION",
    # "-DCPPGC_POINTER_COMPRESSION",

    "-DENABLE_HANDLE_ZAPPING",
    "-DICU_UTIL_DATA_IMPL=ICU_UTIL_DATA_SHARED",
    "-DUCONFIG_NO_SERVICE=1",
    "-DU_ENABLE_DYLOAD=0",
    "-DU_STATIC_IMPLEMENTATION=1",
    "-DU_HAVE_STD_STRING=1",
    "-DUCONFIG_NO_BREAK_ITERATION=0",

    "-fPIC", 
    "-fno-exceptions", 
    "-fvisibility=hidden", 
    "--target=x86_64-linux-guneabi", 
    "-DUSE_EGL", 
    "-DSK_GL", 
    "-DSK_SUPPORT_GPU=1", 
    "-DSK_GRAPHITE_ENABLED", 
    "-DSK_SUPPORT_LEGACY_SLUG_CONVERT", 
    "-DSK_B32_SHIFT=16", 
    "-DSK_G32_SHIFT=8", 
    "-DSK_R32_SHIFT=0", 
    "-DSK_A32_SHIFT=24", 
    "-DOS_LINUX=1", 
    "-DENABLE_MB_MEDIA=1", 
    "-DV8_HOST_ARCH_X64", 
    "-DV8_TARGET_ARCH_X64", 
    "-D__POINT_SIZE__=8", 
    "-D__USE_OPENGL__", 
    "-DV8_ENABLE_MAGLEV", 
    "-mno-avx", 
    "-DV8_EXTERNAL_CODE_SPACE",
    "-DV8_DEPRECATION_WARNINGS", 
    "-DV8_COMPRESS_POINTERS", 
    "-DV8_COMPRESS_POINTERS_IN_SHARED_CAGE", 
    "-DV8_31BIT_SMIS_ON_64BIT_ARCH", 
    "-DCPPGC_CAGED_HEAP", 
    "-DCPPGC_YOUNG_GENERATION", 
    "-DCPPGC_POINTER_COMPRESSION",  
  ]

  sources = [

    "src/api/api-natives.cc",
    "src/api/api.cc",
    "src/api/api-arguments.cc",
    "src/asmjs/asm-js.cc",
    "src/asmjs/asm-parser.cc",
    "src/asmjs/asm-scanner.cc",
    "src/asmjs/asm-types.cc",
    "src/ast/ast-function-literal-id-reindexer.cc",
    "src/ast/ast-value-factory.cc",
    "src/ast/modules.cc",
    "src/ast/prettyprinter.cc",
    "src/ast/scopes.cc",
    "src/ast/source-range-ast-visitor.cc",
    "src/ast/variables.cc",
    "src/ast/ast.cc",
    "src/base/debug/stack_trace_posix.cc",
    "src/base/debug/stack_trace.cc",
    "src/base/numbers/bignum.cc",
    "src/base/numbers/bignum-dtoa.cc",
    "src/base/numbers/cached-powers.cc",
    "src/base/numbers/diy-fp.cc",
    "src/base/numbers/dtoa.cc",
    "src/base/numbers/fast-dtoa.cc",
    "src/base/numbers/fixed-dtoa.cc",
    "src/base/numbers/strtod.cc",
    "src/base/platform/time.cc",
    "src/base/platform/condition-variable.cc",
    "src/base/platform/memory-protection-key.cc",
    "src/base/platform/mutex.cc",
    "src/base/platform/platform-posix.cc",
    "src/base/platform/platform-linux.cc",
    "src/base/platform/platform-posix-time.cc",
    "src/base/platform/semaphore.cc",
    "src/base/sanitizer/lsan-virtual-address-space.cc",
    "src/base/sanitizer/lsan-page-allocator.cc",
    "src/base/utils/random-number-generator.cc",
    "src/base/ieee754.cc",
    "src/base/logging.cc",
    "src/base/once.cc",
    "src/base/page-allocator.cc",
    "src/base/region-allocator.cc",
    "src/base/strings.cc",
    "src/base/sys-info.cc",
    "src/base/virtual-address-space.cc",
    "src/base/virtual-address-space-page-allocator.cc",
    "src/base/vlq-base64.cc",
    "src/base/bits.cc",
    "src/base/bounded-page-allocator.cc",
    "src/base/cpu.cc",
    "src/base/division-by-constant.cc",
    "src/base/emulated-virtual-address-subspace.cc",
    "src/base/file-utils.cc",
    "src/baseline/baseline-compiler.cc",
    "src/baseline/bytecode-offset-iterator.cc",
    "src/baseline/baseline.cc",
    "src/baseline/baseline-batch-compiler.cc",
    "src/bigint/mul-toom.cc",
    "src/bigint/tostring.cc",
    "src/bigint/vector-arithmetic.cc",
    "src/bigint/bigint-internal.cc",
    "src/bigint/bitwise.cc",
    "src/bigint/div-barrett.cc",
    "src/bigint/div-burnikel.cc",
    "src/bigint/div-helpers.cc",
    "src/bigint/div-schoolbook.cc",
    "src/bigint/fromstring.cc",
    "src/bigint/mul-fft.cc",
    "src/bigint/mul-karatsuba.cc",
    "src/bigint/mul-schoolbook.cc",
    "src/builtins/x64/builtins-x64.cc",
    "src/builtins/arm64/builtins-arm64.cc",
    "src/builtins/arm/builtins-arm.cc",
    "src/builtins/accessors.cc",
    "src/builtins/builtins-web-snapshots.cc",
    "src/builtins/builtins.cc",
    "src/builtins/builtins-api.cc",
    "src/builtins/builtins-array.cc",
    "src/builtins/builtins-arraybuffer.cc",
    "src/builtins/builtins-array-gen.cc",
    "src/builtins/builtins-async-function-gen.cc",
    "src/builtins/builtins-async-gen.cc",
    "src/builtins/builtins-async-generator-gen.cc",
    "src/builtins/builtins-async-iterator-gen.cc",
    "src/builtins/builtins-async-module.cc",
    "src/builtins/builtins-atomics-synchronization.cc",
    "src/builtins/builtins-bigint.cc",
    "src/builtins/builtins-bigint-gen.cc",
    "src/builtins/builtins-call-gen.cc",
    "src/builtins/builtins-callsite.cc",
    "src/builtins/builtins-collections.cc",
    "src/builtins/builtins-collections-gen.cc",
    "src/builtins/builtins-console.cc",
    "src/builtins/builtins-constructor-gen.cc",
    "src/builtins/builtins-conversion-gen.cc",
    "src/builtins/builtins-dataview.cc",
    "src/builtins/builtins-date.cc",
    "src/builtins/builtins-date-gen.cc",
    "src/builtins/builtins-error.cc",
    "src/builtins/builtins-function.cc",
    "src/builtins/builtins-generator-gen.cc",
    "src/builtins/builtins-global.cc",
    "src/builtins/builtins-global-gen.cc",
    "src/builtins/builtins-handler-gen.cc",
    "src/builtins/builtins-ic-gen.cc",
    "src/builtins/builtins-internal.cc",
    "src/builtins/builtins-internal-gen.cc",
    "src/builtins/builtins-interpreter-gen.cc",
    "src/builtins/builtins-iterator-gen.cc",
    "src/builtins/builtins-json.cc",
    "src/builtins/builtins-lazy-gen.cc",
    "src/builtins/builtins-microtask-queue-gen.cc",
    "src/builtins/builtins-number.cc",
    "src/builtins/builtins-number-gen.cc",
    "src/builtins/builtins-object.cc",
    "src/builtins/builtins-object-gen.cc",
    "src/builtins/builtins-promise-gen.cc",
    "src/builtins/builtins-proxy-gen.cc",
    "src/builtins/builtins-reflect.cc",
    "src/builtins/builtins-regexp.cc",
    "src/builtins/builtins-regexp-gen.cc",
    "src/builtins/builtins-shadow-realm.cc",
    "src/builtins/builtins-shadow-realm-gen.cc",
    "src/builtins/builtins-shared-array.cc",
    "src/builtins/builtins-sharedarraybuffer.cc",
    "src/builtins/builtins-sharedarraybuffer-gen.cc",
    "src/builtins/builtins-string.cc",
    "src/builtins/builtins-string-gen.cc",
    "src/builtins/builtins-struct.cc",
    "src/builtins/builtins-symbol.cc",
    "src/builtins/builtins-temporal.cc",
    "src/builtins/builtins-temporal-gen.cc",
    "src/builtins/builtins-trace.cc",
    "src/builtins/builtins-typed-array.cc",
    "src/builtins/builtins-typed-array-gen.cc",
    "src/builtins/builtins-wasm-gen.cc",
    "src/builtins/builtins-weak-refs.cc",
    "src/builtins/constants-table-builder.cc",
    "src/builtins/generate-bytecodes-builtins-list.cc",
    "src/builtins/growable-fixed-array-gen.cc",
    "src/builtins/profile-data-reader.cc",
    "src/builtins/setup-builtins-internal.cc",
    "src/codegen/x64/assembler-x64.cc",
    "src/codegen/x64/macro-assembler-x64.cc",
    "src/codegen/x64/cpu-x64.cc",
    "src/codegen/arm64/assembler-arm64.cc",
    "src/codegen/arm64/cpu-arm64.cc",
    "src/codegen/arm64/decoder-arm64.cc",
    "src/codegen/arm64/instructions-arm64.cc",
    "src/codegen/arm64/instructions-arm64-constants.cc",
    "src/codegen/arm64/macro-assembler-arm64.cc",
    "src/codegen/arm64/register-arm64.cc",
    "src/codegen/arm64/utils-arm64.cc",
    "src/codegen/arm/cpu-arm.cc",
    "src/codegen/arm/assembler-arm.cc",
    "src/codegen/arm/constants-arm.cc",
    "src/codegen/arm/macro-assembler-arm.cc",
    "src/codegen/external-reference.cc",
    "src/codegen/external-reference-encoder.cc",
    "src/codegen/external-reference-table.cc",
    "src/codegen/flush-instruction-cache.cc",
    "src/codegen/handler-table.cc",
    "src/codegen/interface-descriptors.cc",
    "src/codegen/machine-type.cc",
    "src/codegen/maglev-safepoint-table.cc",
    "src/codegen/optimized-compilation-info.cc",
    "src/codegen/pending-optimization-table.cc",
    "src/codegen/register-configuration.cc",
    "src/codegen/reloc-info.cc",
    "src/codegen/safepoint-table.cc",
    "src/codegen/source-position.cc",
    "src/codegen/source-position-table.cc",
    "src/codegen/string-constants.cc",
    "src/codegen/tick-counter.cc",
    "src/codegen/tnode.cc",
    "src/codegen/turbo-assembler.cc",
    "src/codegen/unoptimized-compilation-info.cc",
    "src/codegen/aligned-slot-allocator.cc",
    "src/codegen/assembler.cc",
    "src/codegen/bailout-reason.cc",
    "src/codegen/code-comments.cc",
    "src/codegen/code-desc.cc",
    "src/codegen/code-factory.cc",
    "src/codegen/code-reference.cc",
    "src/codegen/code-stub-assembler.cc",
    "src/codegen/compilation-cache.cc",
    "src/codegen/compiler.cc",
    "src/codegen/constant-pool.cc",
    "src/codegen/shared-ia32-x64/macro-assembler-shared-ia32-x64.cc",
    "src/common/assert-scope.cc",
    "src/common/code-memory-access.cc",
    "src/compiler/access-builder.cc",
    "src/compiler/access-info.cc",
    "src/compiler/add-type-assertions-reducer.cc",
    "src/compiler/all-nodes.cc",
    "src/compiler/basic-block-instrumentor.cc",
    "src/compiler/branch-condition-duplicator.cc",
    "src/compiler/branch-elimination.cc",
    "src/compiler/bytecode-analysis.cc",
    "src/compiler/bytecode-graph-builder.cc",
    "src/compiler/bytecode-liveness-map.cc",
    "src/compiler/checkpoint-elimination.cc",
    "src/compiler/c-linkage.cc",
    "src/compiler/code-assembler.cc",
    "src/compiler/common-node-cache.cc",
    "src/compiler/common-operator.cc",
    "src/compiler/common-operator-reducer.cc",
    "src/compiler/compilation-dependencies.cc",
    "src/compiler/compiler-source-position-table.cc",
    "src/compiler/constant-folding-reducer.cc",
    "src/compiler/control-equivalence.cc",
    "src/compiler/control-flow-optimizer.cc",
    "src/compiler/csa-load-elimination.cc",
    "src/compiler/dead-code-elimination.cc",
    "src/compiler/decompression-optimizer.cc",
    "src/compiler/effect-control-linearizer.cc",
    "src/compiler/escape-analysis.cc",
    "src/compiler/escape-analysis-reducer.cc",
    "src/compiler/fast-api-calls.cc",
    "src/compiler/feedback-source.cc",
    "src/compiler/frame.cc",
    "src/compiler/frame-states.cc",
    "src/compiler/graph.cc",
    "src/compiler/graph-assembler.cc",
    "src/compiler/graph-reducer.cc",
    "src/compiler/graph-trimmer.cc",
    "src/compiler/graph-visualizer.cc",
    "src/compiler/heap-refs.cc",
    "src/compiler/int64-lowering.cc",
    "src/compiler/js-call-reducer.cc",
    "src/compiler/js-context-specialization.cc",
    "src/compiler/js-create-lowering.cc",
    "src/compiler/js-generic-lowering.cc",
    "src/compiler/js-graph.cc",
    "src/compiler/js-heap-broker.cc",
    "src/compiler/js-inlining.cc",
    "src/compiler/js-inlining-heuristic.cc",
    "src/compiler/js-intrinsic-lowering.cc",
    "src/compiler/js-native-context-specialization.cc",
    "src/compiler/js-operator.cc",
    "src/compiler/js-typed-lowering.cc",
    "src/compiler/js-type-hint-lowering.cc",
    "src/compiler/late-escape-analysis.cc",
    "src/compiler/linear-scheduler.cc",
    "src/compiler/linkage.cc",
    "src/compiler/load-elimination.cc",
    "src/compiler/loop-analysis.cc",
    "src/compiler/loop-peeling.cc",
    "src/compiler/loop-unrolling.cc",
    "src/compiler/loop-variable-optimizer.cc",
    "src/compiler/machine-graph.cc",
    "src/compiler/machine-graph-verifier.cc",
    "src/compiler/machine-operator.cc",
    "src/compiler/machine-operator-reducer.cc",
    "src/compiler/map-inference.cc",
    "src/compiler/memory-lowering.cc",
    "src/compiler/memory-optimizer.cc",
    "src/compiler/node.cc",
    "src/compiler/node-marker.cc",
    "src/compiler/node-matchers.cc",
    "src/compiler/node-observer.cc",
    "src/compiler/node-origin-table.cc",
    "src/compiler/node-properties.cc",
    "src/compiler/opcodes.cc",
    "src/compiler/operation-typer.cc",
    "src/compiler/operator.cc",
    "src/compiler/operator-properties.cc",
    "src/compiler/osr.cc",
    "src/compiler/pipeline.cc",
    "src/compiler/pipeline-statistics.cc",
    "src/compiler/property-access-builder.cc",
    "src/compiler/raw-machine-assembler.cc",
    "src/compiler/redundancy-elimination.cc",
    "src/compiler/refs-map.cc",
    "src/compiler/representation-change.cc",
    "src/compiler/schedule.cc",
    "src/compiler/scheduler.cc",
    "src/compiler/select-lowering.cc",
    "src/compiler/simplified-lowering.cc",
    "src/compiler/simplified-lowering-verifier.cc",
    "src/compiler/simplified-operator.cc",
    "src/compiler/simplified-operator-reducer.cc",
    "src/compiler/state-values-utils.cc",
    "src/compiler/store-store-elimination.cc",
    "src/compiler/type-cache.cc",
    "src/compiler/typed-optimization.cc",
    "src/compiler/type-narrowing-reducer.cc",
    "src/compiler/typer.cc",
    "src/compiler/types.cc",
    "src/compiler/value-numbering-reducer.cc",
    "src/compiler/verifier.cc",
    "src/compiler/wasm-compiler.cc",
    "src/compiler/wasm-escape-analysis.cc",
    "src/compiler/wasm-gc-lowering.cc",
    "src/compiler/wasm-gc-operator-reducer.cc",
    "src/compiler/wasm-graph-assembler.cc",
    "src/compiler/wasm-inlining.cc",
    "src/compiler/wasm-loop-peeling.cc",
    "src/compiler/wasm-typer.cc",
    "src/compiler/zone-stats.cc",
    "src/compiler/backend/x64/code-generator-x64.cc",
    "src/compiler/backend/x64/instruction-scheduler-x64.cc",
    "src/compiler/backend/x64/instruction-selector-x64.cc",
    "src/compiler/backend/x64/unwinding-info-writer-x64.cc",
    "src/compiler/backend/arm64/unwinding-info-writer-arm64.cc",
    "src/compiler/backend/arm64/instruction-selector-arm64.cc",
    "src/compiler/backend/arm64/instruction-scheduler-arm64.cc",
    "src/compiler/backend/arm64/code-generator-arm64.cc",
    "src/compiler/backend/arm/code-generator-arm.cc",
    "src/compiler/backend/arm/unwinding-info-writer-arm.cc",
    "src/compiler/backend/arm/instruction-selector-arm.cc",
    "src/compiler/backend/arm/instruction-scheduler-arm.cc",
    "src/compiler/backend/code-generator.cc",
    "src/compiler/backend/frame-elider.cc",
    "src/compiler/backend/gap-resolver.cc",
    "src/compiler/backend/instruction.cc",
    "src/compiler/backend/instruction-scheduler.cc",
    "src/compiler/backend/instruction-selector.cc",
    "src/compiler/backend/jump-threading.cc",
    "src/compiler/backend/mid-tier-register-allocator.cc",
    "src/compiler/backend/move-optimizer.cc",
    "src/compiler/backend/register-allocator.cc",
    "src/compiler/backend/register-allocator-verifier.cc",
    "src/compiler/backend/spill-placer.cc",
    "src/compiler-dispatcher/lazy-compile-dispatcher.cc",
    "src/compiler-dispatcher/optimizing-compile-dispatcher.cc",
    "src/date/date.cc",
    "src/date/dateparser.cc",
    "src/debug/debug.cc",
    "src/debug/debug-coverage.cc",
    "src/debug/debug-evaluate.cc",
    "src/debug/debug-frames.cc",
    "src/debug/debug-interface.cc",
    "src/debug/debug-property-iterator.cc",
    "src/debug/debug-scope-iterator.cc",
    "src/debug/debug-scopes.cc",
    "src/debug/debug-stack-trace-iterator.cc",
    "src/debug/debug-wasm-objects.cc",
    "src/debug/liveedit.cc",
    "src/debug/liveedit-diff.cc",
    "src/deoptimizer/x64/deoptimizer-x64.cc",
    "src/deoptimizer/arm64/deoptimizer-arm64.cc",
    "src/deoptimizer/arm/deoptimizer-arm.cc",
    "src/deoptimizer/deoptimized-frame-info.cc",
    "src/deoptimizer/deoptimizer.cc",
    "src/deoptimizer/deoptimizer-cfi-builtins.cc",
    "src/deoptimizer/deoptimize-reason.cc",
    "src/deoptimizer/materialized-object-store.cc",
    "src/deoptimizer/translated-state.cc",
    "src/deoptimizer/translation-array.cc",
    "src/diagnostics/x64/unwinder-x64.cc",
    "src/diagnostics/x64/eh-frame-x64.cc",
    "src/diagnostics/x64/disasm-x64.cc",
    "src/diagnostics/arm64/disasm-arm64.cc",
    "src/diagnostics/arm64/eh-frame-arm64.cc",
    "src/diagnostics/arm64/unwinder-arm64.cc",
    "src/diagnostics/arm/disasm-arm.cc",
    "src/diagnostics/arm/eh-frame-arm.cc",
    "src/diagnostics/arm/unwinder-arm.cc",
    "src/diagnostics/basic-block-profiler.cc",
    "src/diagnostics/compilation-statistics.cc",
    "src/diagnostics/disassembler.cc",
    "src/diagnostics/eh-frame.cc",
    "src/diagnostics/gdb-jit.cc",
    "src/diagnostics/objects-debug.cc",
    "src/diagnostics/objects-printer.cc",
    "src/diagnostics/perf-jit.cc",
    "src/diagnostics/unwinder.cc",
    "src/execution/x64/frame-constants-x64.cc",
    "src/execution/arm/frame-constants-arm.cc",
    "src/execution/arm64/frame-constants-arm64.cc",
    "src/execution/arm64/pointer-auth-arm64.cc",
    "src/execution/arm64/simulator-arm64.cc",
    "src/execution/arm64/simulator-logic-arm64.cc",
    "src/execution/arguments.cc",
    "src/execution/clobber-registers.cc",
    "src/execution/embedder-state.cc",
    "src/execution/encoded-c-signature.cc",
    "src/execution/execution.cc",
    "src/execution/frames.cc",
    "src/execution/futex-emulation.cc",
    "src/execution/interrupts-scope.cc",
    "src/execution/isolate.cc",
    "src/execution/local-isolate.cc",
    "src/execution/messages.cc",
    "src/execution/microtask-queue.cc",
    "src/execution/protectors.cc",
    "src/execution/simulator-base.cc",
    "src/execution/stack-guard.cc",
    "src/execution/thread-id.cc",
    "src/execution/thread-local-top.cc",
    "src/execution/tiering-manager.cc",
    "src/execution/v8threads.cc",
    "src/extensions/statistics-extension.cc",
    "src/extensions/trigger-failure-extension.cc",
    "src/extensions/cputracemark-extension.cc",
    "src/extensions/externalize-string-extension.cc",
    "src/extensions/gc-extension.cc",
    "src/extensions/ignition-statistics-extension.cc",
    "src/flags/flags.cc",
    "src/compiler/turboshaft/graph-builder.cc",
    "src/compiler/turboshaft/operations.cc",
    "src/compiler/turboshaft/optimization-phase.cc",
    "src/compiler/turboshaft/recreate-schedule.cc",
    "src/compiler/turboshaft/representations.cc",
    "src/compiler/turboshaft/simplify-tf-loops.cc",
    "src/compiler/turboshaft/utils.cc",
    "src/compiler/turboshaft/decompression-optimization.cc",
    "src/compiler/turboshaft/graph-visualizer-tur.cc",
    "src/compiler/turboshaft/graph-tur.cc",
    "src/builtins/builtins-intl.cc",
    "src/builtins/builtins-intl-gen.cc",
    "src/web-snapshot/web-snapshot.cc",
    "src/numbers/math-random.cc",
    "src/numbers/conversions.cc",
    "src/maglev/maglev.cc",
    "src/maglev/maglev-code-generator.cc",
    "src/maglev/maglev-compilation-info.cc",
    "src/maglev/maglev-compilation-unit.cc",
    "src/maglev/maglev-compiler.cc",
    "src/maglev/maglev-concurrent-dispatcher.cc",
    "src/maglev/maglev-graph-builder.cc",
    "src/maglev/maglev-graph-printer.cc",
    "src/maglev/maglev-interpreter-frame-state.cc",
    "src/maglev/maglev-ir.cc",
    "src/maglev/maglev-regalloc.cc",
    "src/objects/visitors.cc",
    "src/objects/backing-store.cc",
    "src/objects/bigint.cc",
    "src/objects/call-site-info.cc",
    "src/objects/code.cc",
    "src/objects/code-kind.cc",
    "src/objects/compilation-cache-table.cc",
    "src/objects/contexts.cc",
    "src/objects/debug-objects.cc",
    "src/objects/elements.cc",
    "src/objects/elements-kind.cc",
    "src/objects/embedder-data-array.cc",
    "src/objects/feedback-vector.cc",
    "src/objects/field-type.cc",
    "src/objects/js-array-buffer.cc",
    "src/objects/js-atomics-synchronization.cc",
    "src/objects/js-function.cc",
    "src/objects/js-objects.cc",
    "src/objects/js-raw-json.cc",
    "src/objects/js-regexp.cc",
    "src/objects/js-temporal-objects.cc",
    "src/objects/keys.cc",
    "src/objects/literal-objects.cc",
    "src/objects/lookup.cc",
    "src/objects/lookup-cache.cc",
    "src/objects/managed.cc",
    "src/objects/map.cc",
    "src/objects/map-updater.cc",
    "src/objects/module.cc",
    "src/objects/objects.cc",
    "src/objects/object-type.cc",
    "src/objects/option-utils.cc",
    "src/objects/ordered-hash-table.cc",
    "src/objects/property.cc",
    "src/objects/property-descriptor.cc",
    "src/objects/scope-info.cc",
    "src/objects/shared-function-info.cc",
    "src/objects/simd.cc",
    "src/objects/source-text-module.cc",
    "src/objects/string.cc",
    "src/objects/string-comparator.cc",
    "src/objects/string-forwarding-table.cc",
    "src/objects/string-table.cc",
    "src/objects/swiss-name-dictionary.cc",
    "src/objects/symbol-table.cc",
    "src/objects/synthetic-module.cc",
    "src/objects/tagged-impl.cc",
    "src/objects/template-objects.cc",
    "src/objects/templates.cc",
    "src/objects/transitions.cc",
    "src/objects/type-hints.cc",
    "src/objects/value-serializer.cc",
    "src/parsing/token.cc",
    "src/parsing/func-name-inferrer.cc",
    "src/parsing/import-assertions.cc",
    "src/parsing/literal-buffer.cc",
    "src/parsing/parse-info.cc",
    "src/parsing/parser.cc",
    "src/parsing/parsing.cc",
    "src/parsing/pending-compilation-error-handler.cc",
    "src/parsing/preparse-data.cc",
    "src/parsing/preparser.cc",
    "src/parsing/rewriter.cc",
    "src/parsing/scanner.cc",
    "src/parsing/scanner-character-streams.cc",
    "src/profiler/weak-code-registry.cc",
    "src/profiler/allocation-tracker.cc",
    "src/profiler/cpu-profiler.cc",
    "src/profiler/heap-profiler.cc",
    "src/profiler/heap-snapshot-generator.cc",
    "src/profiler/profile-generator.cc",
    "src/profiler/profiler-listener.cc",
    "src/profiler/profiler-stats.cc",
    "src/profiler/sampling-heap-profiler.cc",
    "src/profiler/strings-storage.cc",
    "src/profiler/symbolizer.cc",
    "src/profiler/tick-sample.cc",
    "src/profiler/tracing-cpu-profiler.cc",
    "src/regexp/x64/regexp-macro-assembler-x64.cc",
    "src/regexp/arm64/regexp-macro-assembler-arm64.cc",
    "src/regexp/arm/regexp-macro-assembler-arm.cc", 
    "src/regexp/regexp-utils.cc",
    "src/regexp/regexp.cc",
    "src/regexp/regexp-ast.cc",
    "src/regexp/regexp-bytecode-generator.cc",
    "src/regexp/regexp-bytecode-peephole.cc",
    "src/regexp/regexp-bytecodes.cc",
    "src/regexp/regexp-compiler.cc",
    "src/regexp/regexp-compiler-tonode.cc",
    "src/regexp/regexp-dotprinter.cc",
    "src/regexp/regexp-error.cc",
    "src/regexp/regexp-interpreter.cc",
    "src/regexp/regexp-macro-assembler.cc",
    "src/regexp/regexp-macro-assembler-tracer.cc",
    "src/regexp/regexp-parser.cc",
    "src/regexp/regexp-stack.cc",
    "src/roots/roots.cc",
    "src/runtime/runtime-weak-refs.cc",
    "src/runtime/runtime.cc",
    "src/runtime/runtime-array.cc",
    "src/runtime/runtime-atomics.cc",
    "src/runtime/runtime-bigint.cc",
    "src/runtime/runtime-classes.cc",
    "src/runtime/runtime-collections.cc",
    "src/runtime/runtime-compiler.cc",
    "src/runtime/runtime-date.cc",
    "src/runtime/runtime-debug.cc",
    "src/runtime/runtime-forin.cc",
    "src/runtime/runtime-function.cc",
    "src/runtime/runtime-futex.cc",
    "src/runtime/runtime-generator.cc",
    "src/runtime/runtime-internal.cc",
    "src/runtime/runtime-literals.cc",
    "src/runtime/runtime-module.cc",
    "src/runtime/runtime-numbers.cc",
    "src/runtime/runtime-object.cc",
    "src/runtime/runtime-operators.cc",
    "src/runtime/runtime-promise.cc",
    "src/runtime/runtime-proxy.cc",
    "src/runtime/runtime-regexp.cc",
    "src/runtime/runtime-scopes.cc",
    "src/runtime/runtime-shadow-realm.cc",
    "src/runtime/runtime-strings.cc",
    "src/runtime/runtime-symbol.cc",
    "src/runtime/runtime-temporal.cc",
    "src/runtime/runtime-test.cc",
    "src/runtime/runtime-test-wasm.cc",
    "src/runtime/runtime-trace.cc",
    "src/runtime/runtime-typedarray.cc",
    "src/runtime/runtime-wasm.cc",
    "src/sandbox/sandbox.cc",
    "src/sandbox/external-pointer-table.cc",
    "src/snapshot/embedded/embedded-empty.cc",
    "src/snapshot/embedded/embedded-file-writer.cc",
    "src/snapshot/embedded/platform-embedded-file-writer-base.cc",
    "src/snapshot/embedded/platform-embedded-file-writer-generic.cc",
    "src/snapshot/embedded/embedded-data.cc",
    "src/snapshot/code-serializer.cc",
    "src/snapshot/context-deserializer.cc",
    "src/snapshot/context-serializer.cc",
    "src/snapshot/deserializer.cc",
    "src/snapshot/object-deserializer.cc",
    "src/snapshot/read-only-deserializer.cc",
    "src/snapshot/read-only-serializer.cc",
    "src/snapshot/roots-serializer.cc",
    "src/snapshot/serializer.cc",
    "src/snapshot/serializer-deserializer.cc",
    "src/snapshot/shared-heap-deserializer.cc",
    "src/snapshot/shared-heap-serializer.cc",
    "src/snapshot/snapshot.cc",
    "src/snapshot/snapshot-compression.cc",
    "src/snapshot/snapshot-data.cc",
    "src/snapshot/snapshot-source-sink.cc",
    "src/snapshot/snapshot-utils.cc",
    "src/snapshot/startup-deserializer.cc",
    "src/snapshot/startup-serializer.cc",
    "src/strings/string-case.cc",
    "src/strings/string-stream.cc",
    "src/strings/unicode.cc",
    "src/strings/unicode-decoder.cc",
    "src/strings/uri.cc",
    "src/strings/string-builder.cc",
    "src/tasks/task-utils.cc",
    "src/tasks/cancelable-task.cc",
    "src/tasks/operations-barrier.cc",
    "src/temporal/temporal-parser.cc",
    "src/third_party/siphash/halfsiphash.cc",
    "src/torque/cc-generator.cc",
    "src/torque/cfg.cc",
    "src/torque/class-debug-reader-generator.cc",
    "src/torque/cpp-builder.cc",
    "src/torque/csa-generator.cc",
    "src/torque/declarable.cc",
    "src/torque/declarations.cc",
    "src/torque/declaration-visitor.cc",
    "src/torque/earley-parser.cc",
    "src/torque/global-context.cc",
    "src/torque/implementation-visitor.cc",
    "src/torque/instance-type-generator.cc",
    "src/torque/instructions.cc",
    "src/torque/kythe-data.cc",
    "src/torque/server-data.cc",
    "src/torque/source-positions.cc",
    "src/torque/torque-code-generator.cc",
    "src/torque/torque-compiler.cc",
    "src/torque/torque-parser.cc",
    "src/torque/type-inference.cc",
    "src/torque/type-oracle.cc",
    "src/torque/types-torque.cc",
    "src/torque/type-visitor.cc",
    "src/torque/ls/torque-language-server.cc",
    "src/torque/ls/json.cc",
    "src/torque/ls/message-handler.cc",
    "src/tracing/trace-categories.cc",
    "src/tracing/traced-value.cc",
    "src/tracing/trace-event.cc",
    "src/tracing/tracing-category-observer.cc",
    "src/trap-handler/handler-outside.cc",
    "src/trap-handler/handler-outside-posix.cc",
    "src/trap-handler/handler-shared.cc",
    "src/trap-handler/handler-inside.cc",
    "src/trap-handler/handler-inside-posix.cc",
    "src/utils/sha-256.cc",
    "src/utils/utils-v8.cc",
    "src/utils/v8dll-main.cc",
    "src/utils/version.cc",
    "src/utils/address-map.cc",
    "src/utils/bit-vector.cc",
    "src/utils/detachable-vector.cc",
    "src/utils/hex-format.cc",
    "src/utils/identity-map.cc",
    "src/utils/memcopy.cc",
    "src/utils/ostreams.cc",
    "src/wasm/baseline/liftoff-assembler.cc",
    "src/wasm/baseline/liftoff-compiler.cc",
    "src/wasm/assembler-buffer-cache.cc",
    "src/wasm/canonical-types.cc",
    "src/wasm/c-api.cc",
    "src/wasm/code-space-access.cc",
    "src/wasm/constant-expression.cc",
    "src/wasm/constant-expression-interface.cc",
    "src/wasm/function-body-decoder.cc",
    "src/wasm/function-compiler.cc",
    "src/wasm/graph-builder-interface.cc",
    "src/wasm/jump-table-assembler.cc",
    "src/wasm/local-decl-encoder.cc",
    "src/wasm/memory-tracing.cc",
    "src/wasm/module-compiler.cc",
    "src/wasm/module-decoder.cc",
    "src/wasm/module-instantiate.cc",
    "src/wasm/names-provider.cc",
    "src/wasm/pgo.cc",
    "src/wasm/simd-shuffle.cc",
    "src/wasm/stacks.cc",
    "src/wasm/streaming-decoder.cc",
    "src/wasm/sync-streaming-decoder.cc",
    "src/wasm/value-type.cc",
    "src/wasm/wasm-code-manager.cc",
    "src/wasm/wasm-debug.cc",
    "src/wasm/wasm-disassembler.cc",
    "src/wasm/wasm-engine.cc",
    "src/wasm/wasm-external-refs.cc",
    "src/wasm/wasm-features.cc",
    "src/wasm/wasm-import-wrapper-cache.cc",
    "src/wasm/wasm-init-expr.cc",
    "src/wasm/wasm-js.cc",
    "src/wasm/wasm-module.cc",
    "src/wasm/wasm-module-builder.cc",
    "src/wasm/wasm-module-sourcemap.cc",
    "src/wasm/wasm-objects.cc",
    "src/wasm/wasm-opcodes.cc",
    "src/wasm/wasm-result.cc",
    "src/wasm/wasm-serialization.cc",
    "src/wasm/wasm-subtyping.cc",
    "src/zone/accounting-allocator.cc",
    "src/zone/type-stats.cc",
    "src/zone/zone.cc",
    "src/zone/zone-segment.cc",
    "src/utils/allocation_utils.cc",
    "src/torque/ls/json-parser-torque-ls.cc",
    "src/torque/utils-torque.cc",
    "src/regexp/experimental/experimental.cc",
    "src/regexp/experimental/experimental-bytecode.cc",
    "src/regexp/experimental/experimental-compiler.cc",
    "src/regexp/experimental/experimental-interpreter.cc",
    "src/handles/global-handles.cc",
    "src/handles/handles.cc",
    "src/handles/local-handles.cc",
    "src/handles/persistent-handles.cc",
    "src/handles/shared-object-conveyor-handles.cc",
    "src/snapshot/snapshot-external.cc",
    "src/objects/intl-objects.cc",
    "src/runtime/runtime-intl.cc",
    "src/objects/js-date-time-format.cc",
    "src/objects/js-display-names.cc",
    "src/objects/js-duration-format.cc",
    "src/objects/js-list-format.cc",
    "src/objects/js-number-format.cc",
    "src/objects/js-locale.cc",
    "src/objects/js-plural-rules.cc",
    "src/objects/js-relative-time-format.cc",
    "src/objects/js-segmenter.cc",
    "src/objects/js-segment-iterator.cc",
    "src/objects/js-segments.cc",
    "src/objects/js-collator.cc",
    "src/objects/js-break-iterator.cc",
    "src/strings/char-predicates.cc",
    "src/ic/accessor-assembler.cc",
    "src/ic/binary-op-assembler.cc",
    "src/ic/call-optimization.cc",
    "src/ic/handler-configuration.cc",
    "src/ic/ic-stats.cc",
    "src/ic/ic.cc",
    "src/ic/keyed-store-generic.cc",
    "src/ic/stub-cache.cc",
    "src/ic/unary-op-assembler.cc",
    "src/init/bootstrapper.cc",
    "src/init/icu_util.cc",
    "src/init/isolate-allocator.cc",
    "src/init/setup-isolate-deserialize.cc",
    "src/init/setup-isolate-full.cc",
    "src/init/startup-data-util.cc",
    "src/init/v8.cc",
    "src/inspector/custom-preview.cc",
    "src/inspector/injected-script.cc",
    "src/inspector/inspected-context.cc",
    "src/inspector/remote-object-id.cc",
    "src/inspector/search-util.cc",
    "src/inspector/string-16.cc",
    "src/inspector/string-util.cc",
    "src/inspector/test-interface.cc",
    "src/inspector/v8-console-agent-impl.cc",
    "src/inspector/v8-console-message.cc",
    "src/inspector/v8-console.cc",
    "src/inspector/v8-debugger-agent-impl.cc",
    "src/inspector/v8-debugger-id.cc",
    "src/inspector/v8-debugger-script.cc",
    "src/inspector/v8-debugger.cc",
    "src/inspector/v8-heap-profiler-agent-impl.cc",
    "src/inspector/v8-inspector-impl.cc",
    "src/inspector/v8-inspector-session-impl.cc",
    "src/inspector/v8-profiler-agent-impl.cc",
    "src/inspector/v8-regex.cc",
    "src/inspector/v8-runtime-agent-impl.cc",
    "src/inspector/v8-schema-agent-impl.cc",
    "src/inspector/v8-stack-trace-impl.cc",
    "src/inspector/v8-string-conversions.cc",
    "src/inspector/v8-value-utils.cc",
    "src/inspector/v8-webdriver-serializer.cc",
    "src/inspector/value-mirror.cc",
    "src/interpreter/bytecode-array-builder.cc",
    "src/interpreter/bytecode-array-iterator.cc",
    "src/interpreter/bytecode-array-random-iterator.cc",
    "src/interpreter/bytecode-array-writer.cc",
    "src/interpreter/bytecode-decoder.cc",
    "src/interpreter/bytecode-flags.cc",
    "src/interpreter/bytecode-generator.cc",
    "src/interpreter/bytecode-label.cc",
    "src/interpreter/bytecode-node.cc",
    "src/interpreter/bytecode-operands.cc",
    "src/interpreter/bytecode-register-optimizer.cc",
    "src/interpreter/bytecode-register.cc",
    "src/interpreter/bytecode-source-info.cc",
    "src/interpreter/bytecodes.cc",
    "src/interpreter/constant-array-builder.cc",
    "src/interpreter/control-flow-builders.cc",
    "src/interpreter/handler-table-builder.cc",
    "src/interpreter/interpreter-assembler.cc",
    "src/interpreter/interpreter-generator.cc",
    "src/interpreter/interpreter-intrinsics-generator.cc",
    "src/interpreter/interpreter-intrinsics.cc",
    "src/interpreter/interpreter.cc",
    "src/json/json-parser.cc",
    "src/json/json-stringifier.cc",
    "src/libplatform/default-foreground-task-runner.cc",
    "src/libplatform/default-job.cc",
    "src/libplatform/default-platform.cc",
    "src/libplatform/default-worker-threads-task-runner.cc",
    "src/libplatform/delayed-task-queue.cc",
    "src/libplatform/task-queue.cc",
    "src/libplatform/worker-thread.cc",
    "src/libplatform/tracing/trace-buffer.cc",
    "src/libplatform/tracing/trace-config.cc",
    "src/libplatform/tracing/trace-event-listener.cc",
    "src/libplatform/tracing/trace-object.cc",
    "src/libplatform/tracing/trace-writer.cc",
    "src/libplatform/tracing/tracing-controller.cc",
    "src/libsampler/sampler.cc",
    "src/logging/counters.cc",
    "src/logging/local-logger.cc",
    "src/logging/log-file.cc",
    "src/logging/log.cc",
    "src/logging/metrics.cc",
    "src/logging/runtime-call-stats.cc",
    "src/logging/tracing-flags.cc",
    "src/libplatform/default-platform-wrap.cc",

  ]


}


